# test-django-2025

./: db.sqlite3  hello.py  pyproject.toml
todo/: models.py  serializers.py  views.py
todo/migrations/: 0001_initial.py
todos/: settings.py  urls.py
